crates/mpl-hir/tests/snapshots/diagnostics__rejects_unresolved_source_parameter_like_mplc.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(\"$does_not_exist:bar\")"
---
INPUT:

$does_not_exist:bar

DIAGNOSTICS:

1. Error: unknown parameter `$does_not_exist`

REPORTS:

REPORT 1:

  × unknown parameter `$does_not_exist`
   ╭────
 1 │ $does_not_exist:bar
   · ───────┬───────
   ·        ╰── unknown parameter `$does_not_exist`
   ╰────
