crates/mpl-hir/tests/snapshots/diagnostics__semantic_diagnostics.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
assertion_line: 140
expression: "snapshot(r#\"set timezone = \"UTC\";\n| filter status == 500\n| sample\n| map bogus\n| align to $__interval\n| extend step = $custom\n\"#,)"
---
INPUT:

set timezone = "UTC";
| filter status == 500
| sample
| map bogus
| align to $__interval
| extend step = $custom

DIAGNOSTICS:

1. Error: missing source
2. Error: Unsupported map function: bogus
3. Error: missing `using` function for align
4. Error: unknown parameter `$custom`

REPORTS:

REPORT 1:

  × missing source
   ╭─[2:1]
 1 │     set timezone = "UTC";
 2 │ ╭─▶ | filter status == 500
 3 │ │   | sample
 4 │ │   | map bogus
 5 │ │   | align to $__interval
 6 │ ├─▶ | extend step = $custom
   · ╰──── missing source
   ╰────

REPORT 2:

  × Unsupported map function: bogus
   ╭─[4:7]
 1 │ set timezone = "UTC";
 2 │ | filter status == 500
 3 │ | sample
 4 │ | map bogus
   ·       ──┬──
   ·         ╰── Unsupported map function: bogus
 5 │ | align to $__interval
 6 │ | extend step = $custom
   ╰────

REPORT 3:

  × missing `using` function for align
   ╭─[5:1]
 1 │ set timezone = "UTC";
 2 │ | filter status == 500
 3 │ | sample
 4 │ | map bogus
 5 │ | align to $__interval
   · ───────────┬──────────
   ·            ╰── missing `using` function for align
 6 │ | extend step = $custom
   ╰────

REPORT 4:

  × unknown parameter `$custom`
   ╭─[6:17]
 1 │ set timezone = "UTC";
 2 │ | filter status == 500
 3 │ | sample
 4 │ | map bogus
 5 │ | align to $__interval
 6 │ | extend step = $custom
   ·                 ───┬───
   ·                    ╰── unknown parameter `$custom`
   ╰────
