crates/mpl-hir/tests/snapshots/diagnostics__syntax_diagnostics_pass_through.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
assertion_line: 135
expression: "snapshot(\"dataset:\")"
---
INPUT:

dataset:

DIAGNOSTICS:

1. Error: MPL syntax error: unexpected token or operation

REPORTS:

REPORT 1:

  × MPL syntax error: unexpected token or operation
   ╭────
 1 │ dataset:
   ╰────
