crates/mpl-hir/tests/snapshots/diagnostics__unknown_functions_are_checked_by_category.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
assertion_line: 153
expression: "snapshot(r#\"(dataset:metric\n  | map avg\n  | align using filter::lt\n  | group by host using prom::rate\n  | bucket using sum\n) | compute total using rate\n\"#,)"
---
INPUT:

(dataset:metric
  | map avg
  | align using filter::lt
  | group by host using prom::rate
  | bucket using sum
) | compute total using rate

DIAGNOSTICS:

1. Error: Unsupported map function: avg
2. Error: Unsupported align function: filter::lt
3. Error: Unsupported group function: prom::rate
4. Error: Unsupported bucket function: sum
5. Error: Unsupported compute function: rate

REPORTS:

REPORT 1:

  × Unsupported map function: avg
   ╭─[2:9]
 1 │ (dataset:metric
 2 │   | map avg
   ·         ─┬─
   ·          ╰── Unsupported map function: avg
 3 │   | align using filter::lt
 4 │   | group by host using prom::rate
 5 │   | bucket using sum
 6 │ ) | compute total using rate
   ╰────

REPORT 2:

  × Unsupported align function: filter::lt
   ╭─[3:17]
 1 │ (dataset:metric
 2 │   | map avg
 3 │   | align using filter::lt
   ·                 ─────┬────
   ·                      ╰── Unsupported align function: filter::lt
 4 │   | group by host using prom::rate
 5 │   | bucket using sum
 6 │ ) | compute total using rate
   ╰────

REPORT 3:

  × Unsupported group function: prom::rate
   ╭─[4:25]
 1 │ (dataset:metric
 2 │   | map avg
 3 │   | align using filter::lt
 4 │   | group by host using prom::rate
   ·                         ─────┬────
   ·                              ╰── Unsupported group function: prom::rate
 5 │   | bucket using sum
 6 │ ) | compute total using rate
   ╰────

REPORT 4:

  × Unsupported bucket function: sum
   ╭─[5:18]
 1 │ (dataset:metric
 2 │   | map avg
 3 │   | align using filter::lt
 4 │   | group by host using prom::rate
 5 │   | bucket using sum
   ·                  ─┬─
   ·                   ╰── Unsupported bucket function: sum
 6 │ ) | compute total using rate
   ╰────

REPORT 5:

  × Unsupported compute function: rate
   ╭─[6:25]
 1 │ (dataset:metric
 2 │   | map avg
 3 │   | align using filter::lt
 4 │   | group by host using prom::rate
 5 │   | bucket using sum
 6 │ ) | compute total using rate
   ·                         ──┬─
   ·                           ╰── Unsupported compute function: rate
   ╰────
