crates/mpl-hir/tests/snapshots/diagnostics__warns_to_replace_deprecated_filter.snap
---
source: crates/mpl-hir/tests/diagnostics.rs
expression: "snapshot(\"prod:requests | filter status == 500\",)"
---
INPUT:

prod:requests | filter status == 500

DIAGNOSTICS:

1. Warning: `filter` is deprecated; use `where`
   Fix: Replace with `where` -> "where"

REPORTS:

REPORT 1:

  ⚠ `filter` is deprecated; use `where`
   ╭────
 1 │ prod:requests | filter status == 500
   ·                 ───┬──
   ·                    ╰── `filter` is deprecated; use `where`
   ╰────
  help: `filter` is deprecated; `where` is preferred
